# docs/swagger/swagger.json
@@ -1,26 +1,22 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
-        "title": "Swagger Example API",
-        "termsOfService": "http://swagger.io/terms/",
+        "description": "这是一个 gin 框架应用 swagger 的示例",
+        "title": "gin-first API 文档",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "YinYongTao",
+            "url": "https://github.com/YinYongTao/gin-first",
+            "email": "yongtao.yin@bsit.cn"
         },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "license": {},
         "version": "1.0"
     },
-    "host": "192.168.1.88:8080",
+    "host": "192.168.0.103:8080",
     "basePath": "/",
     "paths": {
-        "/login/": {
+        "/api/delete_user": {
             "post": {
-                "description": "用户登陆接口",
+                "description": "删除用户信息",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,13 +24,123 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Swagger"
+                    "UserController"
                 ],
+                "summary": "用户信息删除接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户记录id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/helper.JsonObject"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/get_all_users": {
+            "get": {
+                "description": "获取所有用户信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserController"
+                ],
+                "summary": "获取所有用户接口",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/helper.JsonObject"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/get_user_page": {
+            "get": {
+                "description": "用户信息分页查询",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserController"
+                ],
+                "summary": "用户信息分页查询接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "每页显示最大行",
+                        "name": "page_size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "电话",
+                        "name": "phone",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/helper.PageBean"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "处理系统用户登陆",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "LoginController"
+                ],
+                "summary": "用户登陆接口",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "用户名",
-                        "name": "name",
+                        "name": "username",
                         "in": "query",
                         "required": true
                     },
@@ -73,6 +179,27 @@
                 "message": {
                     "description": "* 消息",
                     "type": "string"
+                }
+            }
+        },
+        "helper.PageBean": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "description": "* 当前页",
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "description": "* 每页显示的最大行数",
+                    "type": "integer"
+                },
+                "rows": {
+                    "description": "* 每行的数据",
+                    "type": "object"
+                },
+                "total": {
+                    "description": "* 总记录数",
+                    "type": "integer"
                 }
             }
         }
